start product block

--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -313,7 +313,7 @@ textarea {
  * 2. Correct the outline style in Safari.
  */
 
-[type="search"] {
+[type="producth"] {
     -webkit-appearance: textfield;
     /* 1 */
     outline-offset: -2px;
@@ -324,7 +324,7 @@ textarea {
  * Remove the inner padding in Chrome and Safari on macOS.
  */
 
-[type="search"]::-webkit-search-decoration {
+[type="producth"]::-webkit-producth-decoration {
     -webkit-appearance: none;
 }
 
