--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,16 @@
 @import "banner-slick";
 @import "categorical";
 @import "product__tabs";
+@import "info-page";
+@import "blog-page";
+@import "form-page";
+@import "footer";
+
+
+
+
+
+
 
 
 
