--- a/app/scss/_form-page.scss
+++ b/app/scss/_form-page.scss
@@ -1,36 +1,46 @@
 .forms {
     margin-bottom: 25px;
+    background-color: #fafafa;
+    padding: 10px;
+
+
 }
 
 
-.form__content-form {
-    display: flex;
-}
-
-.form__input {
-    background-color: #fff;
-    border-radius: 3px;
-    padding: 5px 20px;
-    // border: none;
-    font-size: 16px;
-    line-height: 30px;
-    width: 100%;
-    outline: none;
-    margin-right: 25px;
-
-    &::placeholder {
-        color: #656464;
-
+.form {
+    &__content-form {
+        display: flex;
     }
-}
 
-.form__btn {
-    background-color: #DA1D23;
-    padding: 0 25px;
-    width: 460px;
-    text-align: center;
-    color: #fff;
-    font-size: 16px;
+    &__text {
+        margin-bottom: 10px;
+    }
+
+    &__input {
+        background-color: #fff;
+        border-radius: 3px;
+        padding: 5px 20px;
+        // border: none;
+        font-size: 16px;
+        line-height: 30px;
+        width: 100%;
+        outline: none;
+        margin-right: 25px;
+
+        &::placeholder {
+            color: #656464;
+
+        }
+    }
+
+    &__btn {
+        background-color: #03a9f4;
+        padding: 0 25px;
+        width: 460px;
+        text-align: center;
+        color: #fff;
+        font-size: 16px;
+    }
 }
 
 // end .form block
